src/objects/QPMS__Approver__c.object
<CustomObject>
    <description>This object stores approver information related nonconformance module.</description>
    <fields>
        <fullName>QPMS__Allowed_Days__c</fullName>
        <label>Allowed Days</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Process__c</fullName>
        <label>Approval Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Audit Observation Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Request_Subject__c</fullName>
        <description>This field is used in the subject of &quot;Approval_assignment&quot; Email Template</description>
        <formula>QPMS__Audit_Program__c &amp; &quot; &quot; &amp; QPMS__Audit_Type__c &amp; &quot; &quot; &amp; QPMS__Task__c &amp; &quot; &quot; &amp; QPMS__Document_Profile__c &amp; &quot; &quot; &amp; QPMS__Audit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Request Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_Name__c</fullName>
        <formula>QPMS__User__r.LastName  &amp; &quot;, &quot; &amp; QPMS__User__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Id__c</fullName>
        <description>To reference Audit record for task approvers</description>
        <formula>QPMS__General_Task__r.QPMS__Audit__c</formula>
        <inlineHelpText>To reference Audit record for task approvers</inlineHelpText>
        <label>Audit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Program_Id__c</fullName>
        <description>To reference Audit Program record for task approvers</description>
        <formula>QPMS__General_Task__r.QPMS__Audit_Program__c</formula>
        <inlineHelpText>To reference Audit Program record for task approvers</inlineHelpText>
        <label>Audit Program Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup to Audit program object</description>
        <label>Audit Program</label>
        <referenceTo>QPMS__Audit_Program__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is look up to audit type object</description>
        <label>Audit Type</label>
        <referenceTo>QPMS__Audit_Type__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup to Audit object</description>
        <label>Audit</label>
        <referenceTo>QPMS__Audit__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__CAPAID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAPA</label>
        <referenceTo>QPMS__CAPA__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__CAPA__c</fullName>
        <formula>QPMS__General_Task__r.QPMS__CAPA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAPA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Change_Management_Name__c</fullName>
        <formula>QPMS__General_Task__r.QPMS__Change_Management__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Management</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Change_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in approval process for change management</description>
        <label>Change Management</label>
        <referenceTo>QPMS__Change_Management__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist</label>
        <referenceTo>QPMS__Checklist__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Comments__c</fullName>
        <description>This field is for to capture approval history</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Profile_Name__c</fullName>
        <formula>QPMS__General_Task__r.QPMS__Document_Profile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Profile</label>
        <referenceTo>QPMS__Document_Profile__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Due_Date__c</fullName>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__General_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Task</label>
        <referenceTo>QPMS__General_Task__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manager of Approver, Used for notification through email alert</description>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ManagersApprovers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__NC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non Conformance</label>
        <referenceTo>QPMS__Non_Conformance__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Non_Conformance__c</fullName>
        <formula>QPMS__General_Task__r.QPMS__Non_Conformance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Conformance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Observation_Id__c</fullName>
        <formula>QPMS__General_Task__r.QPMS__Observation__c</formula>
        <label>Observation Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Observation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Observation</label>
        <referenceTo>QPMS__Observation__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Developer_Name__c</fullName>
        <formula>QPMS__General_Task__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Object__c</fullName>
        <formula>QPMS__General_Task__r.QPMS__CAPA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of Approver, Used for notification through email alert</description>
        <label>Parent Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ChildApprovers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Title__c</fullName>
        <formula>QPMS__General_Task__r.QPMS__AdhocTask_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent_name__c</fullName>
        <formula>QPMS__General_Task__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence_Position__c</fullName>
        <label>Sequence Position</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Status_Updated__c</fullName>
        <label>Status Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Task_Status__c</fullName>
        <formula>Text(QPMS__General_Task__r.QPMS__Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Task__c</fullName>
        <formula>QPMS__General_Task__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Approver</label>
    <nameField>
        <label>Approver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>